--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,10 @@ jobs:
           pip install -r requirements.txt
           pip install -r requirements-dev.txt
 
+      - name: Strip notebook outputs
+        run: |
+          find . -name "*.ipynb" -exec nbstripout {} \;
+
       - name: Run pre-commit hooks
         run: |
           pip install pre-commit
