fix pipeline ci/cd2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -122,7 +122,7 @@ jobs:
       - name: Validate Kubernetes manifests
         uses: docker://ghcr.io/yannh/kubeconform:latest
         with:
-          args: "-strict -ignore-missing-schemas k8s/*.yaml"
+          args: "-strict -ignore-missing-schemas k8s/"
 
       - name: Lint Kubernetes manifests
         run: |
